<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.eurodyn.qlack</groupId>
  <artifactId>qlack-base-application-server</artifactId>
  <version>3.2.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <additionalparam>-Xdoclint:none</additionalparam>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <qlack.version>3.6.0-SNAPSHOT</qlack.version>
    <spring-boot.version>3.1.1</spring-boot.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
    <lombok.version>1.18.28</lombok.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <spring-content-fs-boot-starter.version>3.0.4</spring-content-fs-boot-starter.version>
    <query-dsl.version>5.0.0</query-dsl.version>
    <maven.compiler.version>3.11.0</maven.compiler.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Spring Boot BoM -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <!-- Spring Boot -->
    <dependency>
      <artifactId>spring-boot-starter</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>runtime</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.github.paulcwarren</groupId>
      <artifactId>spring-content-fs-boot-starter</artifactId>
      <version>${spring-content-fs-boot-starter.version}</version>
    </dependency>

    <!-- Third-party dependencies -->
    <dependency>
      <groupId>com.querydsl</groupId>
      <artifactId>querydsl-apt</artifactId>
      <classifier>jakarta</classifier>
      <version>${query-dsl.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.querydsl</groupId>
      <artifactId>querydsl-jpa</artifactId>
      <classifier>jakarta</classifier>
      <version>${query-dsl.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>${mapstruct.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct-processor</artifactId>
      <version>${mapstruct.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>${lombok.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok-mapstruct-binding</artifactId>
      <version>${lombok-mapstruct-binding.version}</version>
    </dependency>
    <dependency>
      <artifactId>liquibase-core</artifactId>
      <groupId>org.liquibase</groupId>
    </dependency>
    <dependency>
      <artifactId>qlack-util-data</artifactId>
      <groupId>com.eurodyn.qlack.util</groupId>
      <version>${qlack.version}</version>
    </dependency>
    <dependency>
      <artifactId>qlack-util-querydsl</artifactId>
      <groupId>com.eurodyn.qlack.util</groupId>
      <version>${qlack.version}</version>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.eurodyn.qlack.util</groupId>
      <artifactId>qlack-util-jwt</artifactId>
      <version>${qlack.version}</version>
    </dependency>
    <dependency>
      <groupId>com.eurodyn.qlack.fuse</groupId>
      <artifactId>qlack-fuse-aaa</artifactId>
      <version>${qlack.version}</version>
    </dependency>
    <dependency>
      <groupId>com.eurodyn.qlack.fuse</groupId>
      <artifactId>qlack-fuse-audit</artifactId>
      <version>${qlack.version}</version>
    </dependency>
    <dependency>
      <groupId>com.eurodyn.qlack.fuse</groupId>
      <artifactId>qlack-fuse-lexicon</artifactId>
      <version>${qlack.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <compilerArgs>
            <arg>-Amapstruct.defaultComponentModel=spring</arg>
            <arg>-Amapstruct.unmappedTargetPolicy=IGNORE</arg>
            <arg>-parameters</arg>
          </compilerArgs>
          <showDeprecation>true</showDeprecation>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <release>${java.version}</release>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <version>${spring-boot.version}</version>
      </plugin>
    </plugins>
  </build>
</project>
